move to git.gnome.org

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
-snappy
+Source and development has moved to:
 
-version 0.1 - "Louis, I think this is the beginning of a beautiful friendship."
-2011-03-25
-version 0.2 - "Mrs. Robinson, you're trying to seduce me."
-2011-06-20
+http://git.gnome.org/snappy
+
+Keep going sure it's grand
